<resources>
    <string name="app_name">Analytic Center</string>
	<string name="app_secret_code">( 暗码 *#*#9999#*#* )</string>
	<string name="system_analyzer">System Analyzer</string>
	<string name="main_sys_analyser">System Monitor</string>
	<string name="main_app_analyser">App Monitor</string>
    <string name="main_app_analyser_sub">实时监控CPU/GPU/内存/电流/温度等状态</string>
    <string name="main_log_analyser">Log Analyzer</string>
    <string name="main_log_analyser_sub">查看Log,智能解析Log并可视化展现信息</string>
    <string name="main_status_analyser">Status Monitor</string>
    <string name="main_status_analyser_sub">可查看手机各种状态信息</string>
    <string name="main_node_viewer">Node Viewer</string>
    <string name="main_node_viewer_sub">查看节点值</string>
	<string name="main_shell_analyser">超级终端</string>
	<string name="main_adb_wireless">ADB wireless</string>
	<string name="main_shell_analyser_sub">进入命令行模式</string>
    <string name="main_automatic_robot">Automatic</string>
    <string name="main_automatic_robot_sub">自动化运行用户场景</string>
	<string name="main_tool_analyser">Tool Box</string>
    <string name="main_tool_analyser_sub">背光调节，Wifi信号等</string>
    <string name="main_perf">Performance</string>
    <string name="main_perf_sub">性能优化调节CPU/GPU/温控等各种参数(开发中)</string>
    <string name="main_benchmark">性能跑分</string>
    <string name="main_benchmark_sub">自动化跑分并统计分数</string>
    <string name="monitor_shell">高级监控</string>
    <string name="monitor_app">App监控</string>
    <string name="main_cpu_governor">CPU Governor</string>
    <string name="main_cpu_governor_sub">调节CPU核数，CPU频率(开发中)</string>
	<string name="status_loading">\n正在加载中...</string>
	<string name="screen_shoot">截屏</string>
	<string name="log_show_all">显示完整Log</string>
	<string name="log_show_search">显示搜索Log</string>
	<string name="log_local_parser">解析本机Log</string>
    <string name="log_parser">智能解析</string>
	<string name="delete">删除</string>
	<string name="view_current_log">查看实时Log</string>
	<string name="view_history_log">查看历史Log</string>
	<string name="delete_current_log">删除实时Log</string>
	<string name="delete_history_log">删除历史Log</string>
    <string name="save_log">保存Log</string>
    <string name="version_update">版本更新</string>
    <string name="two_dimension_code">下载二维码</string>
    <string name="title_monitor">监控</string>
    <string name="title_app_monitor">APP监控</string>
    <string name="title_analyzer">分析</string>
    <string name="title_view">查看</string>
    <string name="title_performance">性能</string>
    <string name="title_power">功耗</string>
    <string name="title_tool">工具箱</string>
    <string name="analysis_monitor">监控表</string>
    <string name="status_power">Power</string>
    <string name="status_battery">Battery</string>
	<string name="top_processes">Process</string>
	<string name="top_threads">Thread</string>
    <string name="power_lcd">LCD</string>
    <string name="power_lock">Lock</string>
    <string name="power_wakeup">Wakeup</string>
    <string name="power_else">VddMin</string>
	<string name="perf_cpu">CPU</string>
	<string name="perf_gpu">GPU</string>
	<string name="perf_io">IO</string>
	<string name="perf_thermal">Thermal</string>
	<string name="toolbox_node">查看节点</string>
	<string name="toolbox_score">安兔兔跑分</string>
	<string name="toolbox_auto">自动化Case</string>
	<string name="toolbox_bright">亮度调节</string>
	<string name="toolbox_kernel">Kernel</string>
	<string name="toolbox_wakeup">唤醒锁</string>
    <string name="toolbox_log_viewer">查看Log</string>
    <string name="toolbox_log_parser">解析Log</string>
    <string name="toolbox_more">更多实用工具</string>
    <string name="adb_tips">有了远程ADB，从此ADB再也不不用数据线.\n 1.手机与电脑处同一局域网\n(联想望京园区请使用lenovo-RD)\n
        2.点击启动按钮，在电脑端输入下方ADB指令即可。</string>
    <string name="txt_sync_time">时钟微调</string>
    <string name="txt_onekey_clear">一键清理</string>
    <string name="txt_onekey_sleep">一键休眠</string>
    <string name="txt_onekey_info">提示：能彻底强杀所有的应用程序，包含部分系统程序</string>
    <string name="txt_onekey_complete">完成</string>
    <string name="data_title_intr">左滑,可解析相应的数据项</string>
	<string name="app_pkgname">包名: </string>
	<string name="app_version">版本: </string>
	<string name="app_pid">PID : </string>
	<string name="app_uid">UID : </string>
	<string name="app_else">其他信息（开发中）</string>
	<string name="about_version">软件版本</string>
	<string name="yes_str">确定</string>
	<string name="no_str">取消</string>
	<string name="close_str">关闭</string>
	<string name="save_str">收藏</string>
	<string name="rtn">返回</string>
	<string name="right_into_description">into</string>
	<string name="log_search">搜索</string>
	<string name="searchHint">请输入搜索关键字</string>
    <string name="LogFileBrowser">sleeplog</string>
    <string name="sleeplog">sleeplog:</string>
    <string name="statistics">查看统计信息</string>
    <string name="sleepTimes">休眠次数：</string>
    <string name="sleepTime">休眠时间：</string>
    <string name="awakeTime">唤醒时间：</string>
    <string name="current_log">查看实时Log</string>
    <string name="history_log">查看保存Log</string>
    <string name="menu_previous">上一页</string>
    <string name="menu_next">下一页</string>
    <string name="firstOne">第一幅图</string>
    <string name="lastOne">最后一幅图</string>
    <string name="mydialog_title">请稍等片刻...</string>
    <string name="mydialog_body">正在执行运算中...</string>
    <string name="Open">打开</string>
    <string name="Delete">删除</string>
    <string name="sleep_detail">查看详细信息</string>
    <string name="msg_exit">退出</string>
    <string name="msg_exit_content">确定退出Analyser吗?</string>
    <string name="dumpsys_text">Dumpsys</string>
    <string name="dialog_choose_title">选择数据</string>
    <string name="introduction_title">使用说明</string>
    <string name="introduction_node_viewer">(1)点击最上方的目录名，可跳转相应的目录；
        (2)点击返回键，可也跳转上级父目录</string>
    <string name="introduction_log_analyser">(1)实时解析：解析手机实时Log;
            (2)历史解析：需提前将Log文件夹放至sdcard/myLog目录。</string>
    <string name="introduction_log_viewer">直接访问本机的Log。 (注：X3的Log机制更改后不支持此功能)</string>
    <string name="introduction_automatic">长按某一个case，可修改执行参数。</string>
    <string name="introduction_performance">只针对X3手机功能,设置完成后点击更新即可</string>
    <string name="introduction_benchmark">请提前安装安兔兔v5.7.1 (运行结果保存至/sdcard/systemAnalyzer/)</string>
    <string name="about_phone">手机版本</string>
    <string name="create_icon">创建桌面图标</string>
    <string name="create_icon_msg">是否创建App桌面图标？</string>
    <string name="help">关于System Analyzer</string>
    <string name="help_url">有任何建议或反馈，欢迎联系MBG BSP或邮件至yuanhh1@lenovo.com(袁辉辉)</string>
    <string name="menu_phone">手机型号</string>
    <string name="menu_phone_version">当前手机版本</string>
    <string name="menu_device_info">设备参数</string>
    <string name="menu_create_icon">创建桌图</string>
    <string name="menu_file">我的文件</string>
    <string name="menu_shot">我的截图</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_help">使用指南</string>
    <string name="menu_weixin">加入微信交流群</string>
    <string name="lenovo">Lenovo Phone RD SW Dev.I BSP 开发</string>
    <string name="shot_path">储存路径： /sdcard/systemAnalyzer/screenshot/</string>
    <string name="menu_monitor_setting">监控设置</string>
    <string name="menu_score_setting">跑分设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_about_title">关于</string>
    <string name="cpu_big_number">大核数:&#160;&#160;</string>
    <string name="cpu_small_number">小核数:&#160;&#160;</string>
    <string name="cpu_big_freq">大核频率(M):&#160;&#160;</string>
    <string name="cpu_small_freq">小核频率(M):&#160;&#160;</string>
    <string name="gpu_freq_tv">GPU频率(M):&#160;&#160;</string>
    <string name="reflash_btn">更新</string>
    <string name="reflash_working">正在执行中。。。</string>
    <string name="reflash_comlepte">执行完成</string>
    <string name="settings_cpu_big_number">CPU大核 个数区间</string>
    <string name="settings_cpu_small_number">CPU小核 个数区间</string>
    <string name="settings_cpu_big_freq">CPU大核 频率区间</string>
    <string name="settings_cpu_small_freq">CPU小核频率区间</string>
    <string name="settings_gpu_freq_tv">GPU频率区间</string>
    <string name="settings_loop">遍历下面配置</string>
    <string name="settings_thermal_control">温控策略</string>
    <string name="settings_benchmark_temp">启动温度 </string>
    <string name="settings_benchmark_temp_hint">不大于则启动</string>
    <string name="wake_lock_status">设置休眠锁</string>
    <string name="partical_wake">保持CPU不休眠</string>
    <string name="screen_wake">保持CPU不休眠，同时屏幕常亮</string>
    <string name="unlock">恢复CPU可休眠状态</string>
    <string name="partical_status">注意：CPU不再休眠，无法进入待机状态</string>
    <string name="screen_status">注意：CPU不再休眠同时屏幕常亮，手机无法进入灭屏状态</string>
    <string name="unlock_status">释放所有的休眠锁，手机恢复正常状态</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="start_monitor">启动</string>
    <string name="stop_monitor">停止</string>
    <string name="change_color">换色</string>
    <string name="moving_bar">拖动条</string>
    <string name="float_fold">收缩</string>
    <string name="float_unfold">展开</string>
    <string name="float_top">TOP</string>
    <string name="float_monitor">监控</string>
    <string name="view_monitor_chart">统计</string>
    <string name="upload">上传</string>
    <string name="status_default">未运行</string>
    <string name="monitor_stop_tips">点击-->统计，可查看可视化图形数据</string>
    <string name="start_automatic">开始自动化</string>
    <string name="stop_automatic">停止自动化</string>
    <string name="start_benchmark">启动跑分</string>
    <string name="stop_benchmark">停止</string>
    <string name="btn_app_close">关闭</string>
    <string name="app_collecting_frequency">监控频率(s):&#160;&#160; </string>
    <string name="monitor_system_app">显示系统APP</string>
    <string name="app_monitor_item_title">设置监控项</string>
    <string name="app_monitor_item_description">可指定后台监控项，尽量按需定制</string>
    <string name="app_floating_item_title">设置浮窗显示项</string>
    <string name="app_floating_item_description">后台监控项，是否同时在前台浮窗展现</string>
    <string name="app_exception_monitor_title">异常监控</string>
    <string name="app_exception_monitor_description">可根据触发条件，扫描后台Top进程</string>
    <string name="btn_app_cpu">CPU监控</string>
    <string name="btn_app_gpu">GPU监控</string>
    <string name="btn_app_memory">Memory监控</string>
    <string name="btn_app_Top">Top监控</string>
    <string name="btn_app_current">电流监控</string>
    <string name="btn_app_battery">电池监控</string>
    <string name="btn_app_all_monitor">全监控</string>
    <string name="btn_app_diy_monitor">自定义监控</string>
    <string name="shell_monitor_title">浮窗显示Adb</string>
    <string name="shell_monitor_description">浮窗显示指定adb指令</string>
    <string name="shell_monitor_hint">Please input adb command</string>
    <string name="shell_monitor_example">例如：cat /sys/class/leds/lcd-backlight/brightness</string>
    <string name="shell_top_title">Top Process</string>
    <string name="et_offset">offset time</string>
    <string name="tv_ms">ms</string>
    <string name="btn_sync">更新</string>
   <string name="preferences">首选项</string>
   <string name="new_window">新建窗口</string>
   <string name="close_window">关闭窗口</string>
   <string name="input_tools">输入法工具</string>
   <string name="window_list">窗口列表</string>
   <string name="special_keys">特殊键</string>
   <string name="screen_preferences">屏幕</string>
   <string name="title_statusbar_preference">状态栏</string>
   <string name="summary_statusbar_preference">显示/隐藏状态栏。</string>
   <string name="dialog_title_statusbar_preference">状态栏</string>
   <string name="title_actionbar_preference">操作栏</string>
   <string name="summary_actionbar_preference">选择操作栏行为 </string>
   <string name="dialog_title_actionbar_preference">操作栏行为</string>
   <string name="text_preferences">文本</string>
   <string name="title_fontsize_preference">文本大小</string>
   <string name="summary_fontsize_preference">选择文本大小</string>
   <string name="dialog_title_fontsize_preference">文本大小</string>
   <string name="title_color_preference">颜色</string>
   <string name="summary_color_preference">选择文本颜色</string>
   <string name="dialog_title_color_preference">文本颜色</string>
</resources>