<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
     <item android:id="@+id/menu_input_tools"
        android:title="@string/input_tools"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="always"/>
     
    <item android:id="@+id/menu_new_window"
        android:title="@string/new_window"
        android:icon="@drawable/ic_menu_add" 
        android:orderInCategory="100"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/menu_close_window"
        android:title="@string/close_window"
        android:icon="@drawable/ic_menu_close_clear_cancel"/>
    
    <item android:id="@+id/menu_window_list"
        android:title="@string/window_list"
        android:icon="@drawable/ic_menu_windows"/>
    
    <item android:id="@+id/menu_special_keys"
        android:title="@string/special_keys"/>
    
    <item android:id="@+id/menu_preferences"
        android:title="@string/preferences"
        android:icon="@drawable/ic_menu_preferences"/>
</menu>
