<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="4dp" >
    
     <RelativeLayout
        android:id="@+id/tool_node_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_header"
        android:layout_marginTop="10dp"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_node"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool_bright_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_center"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_bright"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool_wakeup_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_footer"
        >
        <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_wakeup"/>
        <ImageView
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool_kernel_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_footer"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_kernel"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/tool_logviewer_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_header"
        android:layout_marginTop="4dp"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_log_viewer"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool_logparser_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_center"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_log_parser"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
     </RelativeLayout>
         <RelativeLayout
        android:id="@+id/tool_auto_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_center"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_auto"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool_score_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_footer"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_score"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/tool_more_rl"
        style="@style/item"
        android:background="@drawable/selector_preference_complete"
        android:layout_marginTop="4dp"
        >
       <TextView
            style="@style/slide_menu_left_center_title"
            android:textColor="@color/black"
            android:text="@string/toolbox_more"/>
        <ImageView 
            style="@style/slide_menu_right_image"
            android:src="@drawable/right_into"
            android:contentDescription="@string/right_into_description"/>
    </RelativeLayout>
</LinearLayout>
