<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">	
    <TextView
        
         android:background="@drawable/selector_preference_header"
         android:text="@string/view_current_log"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/view_current_log_tv"
         android:onClick="menuHandler"/>
    <TextView
         android:background="@drawable/selector_preference_footer"
         android:text="@string/view_history_log"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/view_history_log_tv"
         android:onClick="menuHandler"/>
    	
    <TextView
         android:background="@drawable/selector_preference_header"
         android:text="@string/delete_current_log"
         android:layout_marginTop="15sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/delete_current_log_tv"
         android:onClick="menuHandler"/>
    <TextView
         android:background="@drawable/selector_preference_footer"
         android:text="@string/delete_history_log"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/delete_history_log_tv"
         android:onClick="menuHandler"/>
    
    <TextView
         android:background="@drawable/selector_preference_complete"
         android:text="@string/save_log"
         android:layout_marginTop="15sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/save_log_tv"
         android:onClick="menuHandler"/>

</LinearLayout>
