<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_offset"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_offset"
        />
    <TextView
        android:layout_toRightOf="@id/et_offset"
        android:layout_alignBottom="@id/et_offset"
        android:paddingBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/tv_ms"/>
    <Button
        android:id="@+id/btn_sync"
        android:layout_below="@id/et_offset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_sync" />


</RelativeLayout>
