<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
       android:layout_height="20dp"
       android:layout_margin="0dp"
       android:padding="0dp">
    <RelativeLayout
        android:id="@+id/rl_float_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/float_hide_btn"
            android:text="@string/float_fold"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:padding="0dp"
            android:background="@drawable/selector_floating_title"
            />
        <TextView
            android:id="@+id/float_change_btn"
            android:layout_toRightOf="@id/float_hide_btn"
            android:text="@string/change_color"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:padding="0dp"
            android:background="@drawable/selector_floating_title"
            />
        <TextView
            android:id="@+id/float_stop_btn"
            android:layout_toRightOf="@id/float_change_btn"
            android:text="@string/stop_monitor"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:padding="0dp"
            android:background="@drawable/selector_floating_title"
            />
        <TextView
            android:id="@+id/float_screenshot_btn"
            android:layout_toRightOf="@id/float_stop_btn"
            android:text="@string/screen_shoot"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:padding="0sp"
            android:background="@drawable/selector_floating_title"
            />
       <TextView
           android:text="@string/moving_bar"
           android:layout_toRightOf="@id/float_screenshot_btn"
           android:gravity="center"
           android:layout_width="50dp"
           android:layout_height="20dp"
           android:padding="0dp"
           android:background="@drawable/selector_floating_title" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_show_all"
        android:layout_toRightOf="@id/rl_float_title"
        android:gravity="center"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:background="@drawable/selector_floating_title"
        android:text="显示"
        android:visibility="gone"/>
 </RelativeLayout>